# flutter_desktop_learning

./: LICENSE.md  README.md  pubspec.yaml
lib/: home_page.dart  main.dart  native_openal_soft_bindings.dart  record_page.dart  record_page_store.dart  utils.dart
lib/l10n/: app_en.arb
lib/model/: native_audio_recording.dart  record_service.dart  recording_state.dart  sound_service.dart
lib/pages/: audio_file_page.dart  home_page.dart  record_page.dart
lib/screen/: audio_file_page.dart  home_page.dart  record_page.dart
lib/screen/widget/: blinking_widget.dart
lib/stores/: home_page_store.dart  home_page_store.g.dart  record_page_store.dart  record_page_store.g.dart
test/: widget_test.dart
windows/: CMakeLists.txt
windows/native_lib/: AudioPlayManager.cpp  AudioPlayManager.h  AudioRecordingManager.cpp  AudioRecordingManager.h  CMakeLists.txt  native_openal_soft.cpp  native_openal_soft.h  native_sdl.cpp  native_sdl.h
windows/native_lib/example/: play_wav.cpp  record.cpp
windows/runner/: Runner.rc  main.cpp
